[package]
name = "dndbeyond_playerloader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Same package and version as Typst uses.
serde = "1.0"
reqwest = { version = "0.12.18", features = ["blocking"] }
toml = "0.8.22"

[dependencies.wasm-minimal-protocol]
git = "https://github.com/astrale-sharp/wasm-minimal-protocol"
rev = "bb9ccd6b3f4bc554ffec61b89d7d8f15af6236b9"


[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[workspace] # so that it is not included in the upper workspace
